--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@600&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -43,6 +45,10 @@ nav {
 .logo {
   display: flex;
   cursor: pointer;
+}
+
+.logo p {
+  font-family: 'Pacifico', cursive;
 }
 
 ul {
